--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "file-saver": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.1.9",
     "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.4",
     "yup": "^0.32.11"
   },
   "scripts": {
